assignment2/src/CCALParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CCALParser.java */
import java.io.FileNotFoundException;
import java.io.FileInputStream;

public class CCALParser/*@bgen(jjtree)*/implements CCALParserTreeConstants, CCALParserConstants {/*@bgen(jjtree)*/
  protected static JJTCCALParserState jjtree = new JJTCCALParserState();
    static SymbolTable st = new SymbolTable();
    static String scope = "global";

    public static void main(String args[]) {

        // Initialize the parser to read
        CCALParser parser;

        if (args.length == 0) {
            System.out.println("Reading from standard input...");
            parser = new CCALParser(System.in);
        } else if (args.length == 1) {
            try {
                parser = new CCALParser(new FileInputStream(args[0]));
            } catch (FileNotFoundException err) {
                System.err.println("File " + args[0] + " not found");
                return;
            }
        } else {
            System.out.println("CCAL Parser: Usage is one of:");
            System.out.println("    java CCALParser < inputfile");
            System.out.println("OR");
            System.out.println("    java CCALParser inputfile");
            return;
        }

        // Try to parse the file
        try {
            st.printStack();

            SimpleNode root = parser.program();
            root.dump("");

            st.printStack();

            SemanticCheckVisitor visitor = new SemanticCheckVisitor();
            root.jjtAccept(visitor, "");

            IRCodeVisitor IRVisitor = new IRCodeVisitor();
            root.jjtAccept(IRVisitor, "");

            System.out.println("File parsed successfully");
        } catch (ParseException err) {
            System.out.println(err.getMessage());
            System.out.println("Encountered the above errors while parsing the file");
        }
    }

/***********************************
***** SECTION 4 - THE GRAMMAR *****
***********************************/
  static final public SimpleNode program() throws ParseException {
                                 /*@bgen(jjtree) Program */
  Program jjtn000 = new Program(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      declList();
      functionList();
      main();
                                       jjtree.closeNodeScope(jjtn000, true);
                                       jjtc000 = false;
                                       {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void declList() throws ParseException {
                             /*@bgen(jjtree) DeclList */
  DeclList jjtn000 = new DeclList(JJTDECLLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
      case CONST:
        decl();
        jj_consume_token(SEMIC);
        declList();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      varDecl();
      break;
    case CONST:
      constDecl();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void varDecl() throws ParseException {
                           /*@bgen(jjtree) VarDecl */
                           VarDecl jjtn000 = new VarDecl(JJTVARDECL);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(VAR);
      id = lIdent();
      jj_consume_token(COLON);
      type = type();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void constDecl() throws ParseException {
                               /*@bgen(jjtree) ConstDecl */
                               ConstDecl jjtn000 = new ConstDecl(JJTCONSTDECL);
                               boolean jjtc000 = true;
                               jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(CONST);
      id = lIdent();
      jj_consume_token(COLON);
      type = type();
      jj_consume_token(ASSIGN);
      expression();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void functionList() throws ParseException {
                                     /*@bgen(jjtree) FunctionList */
  FunctionList jjtn000 = new FunctionList(JJTFUNCTIONLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOL:
      case VOID:
        function();
        functionList();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void function() throws ParseException {
                            /*@bgen(jjtree) Function */
                            Function jjtn000 = new Function(JJTFUNCTION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);String type; String id;
    try {
      type = type();
      id = lIdent();
                                  scope = id;
      jj_consume_token(LPAREN);
      paramList();
      jj_consume_token(RPAREN);
      openBlock();
      declList();
      statementBlock();
      jj_consume_token(RETURN);
      jj_consume_token(LPAREN);
      returnStatement();
      jj_consume_token(RPAREN);
      jj_consume_token(SEMIC);
      closeBlock();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void returnStatement() throws ParseException {
                                  /*@bgen(jjtree) Return */
  Return jjtn000 = new Return(JJTRETURN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case LPAREN:
      case MIN:
      case NUMBER:
      case IDENT:
        expression();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public String type() throws ParseException {
                      /*@bgen(jjtree) Type */
                      Type jjtn000 = new Type(JJTTYPE);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        t = jj_consume_token(INT);
                    jjtree.closeNodeScope(jjtn000, true);
                    jjtc000 = false;
                   jjtn000.value = t.image; {if (true) return t.image;}
        break;
      case BOOL:
        t = jj_consume_token(BOOL);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.value = t.image; {if (true) return t.image;}
        break;
      case VOID:
        t = jj_consume_token(VOID);
                     jjtree.closeNodeScope(jjtn000, true);
                     jjtc000 = false;
                    jjtn000.value = t.image; {if (true) return t.image;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
        if (jjtc000) {
          jjtree.closeNodeScope(jjtn000, true);
        }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void paramList() throws ParseException {
                               /*@bgen(jjtree) ParamList */
  ParamList jjtn000 = new ParamList(JJTPARAMLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        nempParamList();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void nempParamList() throws ParseException {
                                       /*@bgen(jjtree) NempParamList */
                                       NempParamList jjtn000 = new NempParamList(JJTNEMPPARAMLIST);
                                       boolean jjtc000 = true;
                                       jjtree.openNodeScope(jjtn000);String id; String type;
    try {
      id = lIdent();
      jj_consume_token(COLON);
      type = type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        nempParamList();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void main() throws ParseException {
                     /*@bgen(jjtree) Main */
  Main jjtn000 = new Main(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIN);
      openBlock();
      declList();
      statementBlock();
      closeBlock();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
     st.closeScope();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void statementBlock() throws ParseException {
                                         /*@bgen(jjtree) StatementBlock */
  StatementBlock jjtn000 = new StatementBlock(JJTSTATEMENTBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case SKP:
      case LBRAC:
      case IDENT:
        statement();
        statementBlock();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void statement() throws ParseException {
                    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      lIdent();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        t = jj_consume_token(ASSIGN);
        expression();
        jj_consume_token(SEMIC);
                                                    Assignment jjtn001 = new Assignment(JJTASSIGNMENT);
                                                    boolean jjtc001 = true;
                                                    jjtree.openNodeScope(jjtn001);
        try {
                                                    jjtree.closeNodeScope(jjtn001,  2);
                                                    jjtc001 = false;
                                                   jjtn001.value = t.image;
        } finally {
                                                    if (jjtc001) {
                                                      jjtree.closeNodeScope(jjtn001,  2);
                                                    }
        }
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        argList();
        jj_consume_token(RPAREN);
                                                                                                                            FuncCall jjtn002 = new FuncCall(JJTFUNCCALL);
                                                                                                                            boolean jjtc002 = true;
                                                                                                                            jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(SEMIC);
        } finally {
                                                                                                                            if (jjtc002) {
                                                                                                                              jjtree.closeNodeScope(jjtn002,  2);
                                                                                                                            }
        }
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case LBRAC:
      jj_consume_token(LBRAC);
      statementBlock();
      jj_consume_token(RBRAC);
      break;
    case IF:
      t = jj_consume_token(IF);
      condition();
      jj_consume_token(LBRAC);
      statementBlock();
      jj_consume_token(RBRAC);
      elseStatement();
                                                                              Statement jjtn003 = new Statement(JJTSTATEMENT);
                                                                              boolean jjtc003 = true;
                                                                              jjtree.openNodeScope(jjtn003);
      try {
                                                                              jjtree.closeNodeScope(jjtn003,  3);
                                                                              jjtc003 = false;
                                                                             jjtn003.value = t.image;
      } finally {
                                                                              if (jjtc003) {
                                                                                jjtree.closeNodeScope(jjtn003,  3);
                                                                              }
      }
      break;
    case WHILE:
      t = jj_consume_token(WHILE);
      condition();
      jj_consume_token(LBRAC);
      statementBlock();
      jj_consume_token(RBRAC);
                                                                 Statement jjtn004 = new Statement(JJTSTATEMENT);
                                                                 boolean jjtc004 = true;
                                                                 jjtree.openNodeScope(jjtn004);
      try {
                                                                 jjtree.closeNodeScope(jjtn004,  2);
                                                                 jjtc004 = false;
                                                                jjtn004.value = t.image;
      } finally {
                                                                 if (jjtc004) {
                                                                   jjtree.closeNodeScope(jjtn004,  2);
                                                                 }
      }
      break;
    case SKP:
      jj_consume_token(SKP);
              Skip jjtn005 = new Skip(JJTSKIP);
              boolean jjtc005 = true;
              jjtree.openNodeScope(jjtn005);
      try {
        jj_consume_token(SEMIC);
      } finally {
              if (jjtc005) {
                jjtree.closeNodeScope(jjtn005, true);
              }
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void elseStatement() throws ParseException {
                        Token t;
    t = jj_consume_token(ELSE);
    jj_consume_token(LBRAC);
    statementBlock();
    jj_consume_token(RBRAC);
                                                  Statement jjtn001 = new Statement(JJTSTATEMENT);
                                                  boolean jjtc001 = true;
                                                  jjtree.openNodeScope(jjtn001);
    try {
                                                  jjtree.closeNodeScope(jjtn001,  1);
                                                  jjtc001 = false;
                                                 jjtn001.value = t.image;
    } finally {
                                                  if (jjtc001) {
                                                    jjtree.closeNodeScope(jjtn001,  1);
                                                  }
    }
  }

  static final public void condition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEGATE:
      jj_consume_token(NEGATE);
      condition();
      conditionPrime();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      condition();
      jj_consume_token(RPAREN);
      conditionPrime();
      break;
    case TRUE:
    case FALSE:
    case MIN:
    case NUMBER:
    case IDENT:
      fragment();
      compOp();
      conditionPrime();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void conditionPrime() throws ParseException {
                        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
    case AND:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        t = jj_consume_token(AND);
        break;
      case OR:
        t = jj_consume_token(OR);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      condition();
                                         BoolOp jjtn001 = new BoolOp(JJTBOOLOP);
                                         boolean jjtc001 = true;
                                         jjtree.openNodeScope(jjtn001);
      try {
                                         jjtree.closeNodeScope(jjtn001,  2);
                                         jjtc001 = false;
                                        jjtn001.value = t.image;
      } finally {
                                         if (jjtc001) {
                                           jjtree.closeNodeScope(jjtn001,  2);
                                         }
      }
      break;
    default:
      jj_la1[12] = jj_gen;

    }
  }

  static final public void expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      expression();
      jj_consume_token(RPAREN);
      expressionPrime();
      break;
    case TRUE:
    case FALSE:
    case MIN:
    case NUMBER:
    case IDENT:
      fragment();
      expressionPrime();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expressionPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
    case MIN:
      binOp();
      expressionPrime();
      break;
    default:
      jj_la1[14] = jj_gen;

    }
  }

  static final public void fragment() throws ParseException {
                   Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      rIdent();
      fragmentPrime();
      expressionPrime();
      break;
    case MIN:
      t = jj_consume_token(MIN);
      rIdent();
                          NegateIdent jjtn001 = new NegateIdent(JJTNEGATEIDENT);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
      try {
                          jjtree.closeNodeScope(jjtn001,  1);
                          jjtc001 = false;
                         jjtn001.value = t.image;
      } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  1);
                          }
      }
      expressionPrime();
      break;
    case NUMBER:
      number();
      expressionPrime();
      break;
    case TRUE:
      t = jj_consume_token(TRUE);
                  Boolean jjtn002 = new Boolean(JJTBOOLEAN);
                  boolean jjtc002 = true;
                  jjtree.openNodeScope(jjtn002);
      try {
                  jjtree.closeNodeScope(jjtn002, true);
                  jjtc002 = false;
                 jjtn002.value = t.image;
      } finally {
                  if (jjtc002) {
                    jjtree.closeNodeScope(jjtn002, true);
                  }
      }
      expressionPrime();
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
                   Boolean jjtn003 = new Boolean(JJTBOOLEAN);
                   boolean jjtc003 = true;
                   jjtree.openNodeScope(jjtn003);
      try {
                   jjtree.closeNodeScope(jjtn003, true);
                   jjtc003 = false;
                  jjtn003.value = t.image;
      } finally {
                   if (jjtc003) {
                     jjtree.closeNodeScope(jjtn003, true);
                   }
      }
      expressionPrime();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void fragmentPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      argList();
                           FuncCall jjtn001 = new FuncCall(JJTFUNCCALL);
                           boolean jjtc001 = true;
                           jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RPAREN);
      } finally {
                           if (jjtc001) {
                             jjtree.closeNodeScope(jjtn001,  2);
                           }
      }
      break;
    default:
      jj_la1[16] = jj_gen;

    }
  }

  static final public void binOp() throws ParseException {
                Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD:
      t = jj_consume_token(ADD);
      expression();
                               ArithOp jjtn001 = new ArithOp(JJTARITHOP);
                               boolean jjtc001 = true;
                               jjtree.openNodeScope(jjtn001);
      try {
                               jjtree.closeNodeScope(jjtn001,  2);
                               jjtc001 = false;
                              jjtn001.value = t.image;
      } finally {
                               if (jjtc001) {
                                 jjtree.closeNodeScope(jjtn001,  2);
                               }
      }
      break;
    case MIN:
      t = jj_consume_token(MIN);
      expression();
                               ArithOp jjtn002 = new ArithOp(JJTARITHOP);
                               boolean jjtc002 = true;
                               jjtree.openNodeScope(jjtn002);
      try {
                               jjtree.closeNodeScope(jjtn002,  2);
                               jjtc002 = false;
                              jjtn002.value = t.image;
      } finally {
                               if (jjtc002) {
                                 jjtree.closeNodeScope(jjtn002,  2);
                               }
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
